# impl-macro

./: Cargo.toml
lib/: Cargo.toml
lib/src/: lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
